--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
           </tr>
         </table>
       </div>
+      
+      <div class="card bg-green">
+        <h2>Work experience</h2>
+        <table class="table">
+          <tr>
+            <td>BeeWrb</td>
+            <td>Frontend</td>
+            <td>10.11.2020 - now</td>
+          </tr>
+        </table>
+      </div>
 
       <div class="card bg-red">
         <h2>Contact with me</h2>  
