--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2>Work experience</h2>
         <table class="table">
           <tr>
-            <td>BeeWrb</td>
+            <td>Bee Web</td>
             <td>Frontend</td>
             <td>10.11.2020 - now</td>
           </tr>
